# pygjson

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
python/pygjson/: __init__.py  _pygjson.pyi
src/: lib.rs
tests/: test_pygjson.py
