[package]
name = "pygjson"
version = "0.0.4"
edition = "2021"

[lib]
name = "_pygjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
gjson = { git = "https://github.com/minefuto/gjson.rs", branch = "claude/add-get-many-function-LUHtX" }
