[package]
name = "pygjson"
version = "0.0.7"
edition = "2021"

[lib]
name = "_pygjson"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
gjson = { git = "https://github.com/minefuto/gjson.rs", rev="50ca04be55cce966de660cb4b9764973791894c7" }
