[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pygjson"
version = "0.0.3"
description = "Python bindings for gjson.rs - fast JSON path queries"
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "python"
module-name = "pygjson._pygjson"
features = ["pyo3/extension-module"]
