[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pygjson"
version = "0.0.4"
description = "Python bindings for gjson.rs - fast JSON path queries"
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "minefuto" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.maturin]
python-source = "python"
module-name = "pygjson._pygjson"
features = ["pyo3/extension-module"]
